added join test case